--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
  
 @layer base {
   :root {
+    
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -73,4 +74,23 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.navbar {
+    background-color: transparent;
+    
+    height: 90px;
+    display: flex;
+    top: 0;
+    z-index: 999;
+    transition: background-color 0.3s ease;
+}
+.navbar.active{
+    /* background: linear-gradient(90deg, rgb(4, 4, 4) 0%, rgb(106, 114, 126) 100%); */
+    /* background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0)); */
+   background-color: #624F82;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
