--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,8 @@
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
+
+
   }
  
   .dark {
@@ -75,7 +77,12 @@
     @apply bg-background text-foreground;
   }
 }
-
+:root{
+  
+    --darkviolet: #624F82;
+  --lightviolet: #9F73AB;
+  --darkbg: #161A30;
+}
 .navbar {
     background-color: transparent;
    
